# python-monorepo-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  mkdocs.base.yml  mkdocs.yml  opencode.json  pyproject.toml
.github/agents/: coordenador.agent.md  desenvolvedor-small.agent.md  desenvolvedor.agent.md  documentador.agent.md  engenheiro-dados.agent.md  httpx-dev.agent.md  polars-dev.agent.md  revisor.agent.md  scraper-dev.agent.md  scraper.agent.md
.github/instructions/: tests.instructions.md
.github/workflows/: ci.yml  publish.yml
.opencode/plans/: mkdocs-setup.md
.opencode/skills/copilot-project-structure/: SKILL.md
.opencode/skills/duckdb/: SKILL.md
.opencode/skills/httpx/: SKILL.md
.opencode/skills/logging/: SKILL.md
.opencode/skills/polars/: SKILL.md
.opencode/skills/project-commands/: SKILL.md
.opencode/skills/pyspark/: SKILL.md
.opencode/skills/webscraping/: SKILL.md
docs/: architecture.md  contributing.md  getting-started.md  index.md
scripts/: build_docs.py  run_task.py
