[project]
name = "monorepo"
version = "0.1.0"
description = "Python monorepo template using uv workspaces"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
  "hatch-vcs>=0.4",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "prek>=0.3",
  "pyrefly>=0.57.1",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.9",
  "taskipy>=1.14.1",
  "tqdm>=4.67.3",
]

[tool.uv]
workspace.members = [ "packages/*" ]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
  "*/_version.py", # gerado automaticamente pelo hatch-vcs
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
]
format.indent-style = "space"
format.quote-style = "double"
lint.select = [
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "W",  # pycodestyle warnings
]
lint.ignore = [
  "E501", # line too long (handled by formatter)
]
lint.isort.known-first-party = [ "core", "app", "standalone", "my_sample_package" ]

[tool.pytest]
ini_options.addopts = "-v --tb=short"
ini_options.testpaths = [ "packages" ]
ini_options.python_files = [ "test_*.py", "*_test.py" ]
ini_options.python_classes = [ "Test*" ]
ini_options.python_functions = [ "test_*" ]

[tool.coverage]
run.omit = [
  "*/__init__.py",
  "*/tests/*",
]
run.source = [ "packages" ]
report.show_missing = true
report.skip_covered = false

[tool.taskipy]
tasks.test = { cmd = "uv run python scripts/run_task.py test", help = "Run tests in all packages" }
tasks.lint = { cmd = "uv run python scripts/run_task.py lint", help = "Lint all packages" }
tasks.autofix = { cmd = "uv run python scripts/run_task.py autofix", help = "Autofix all packages" }
tasks.format = { cmd = "uv run python scripts/run_task.py format", help = "Format all packages" }
tasks.docs = { cmd = "uv run python scripts/build_docs.py serve", help = "Build packages docs and serve the portal" }
tasks.docs-build = { cmd = "uv run python scripts/build_docs.py build", help = "Build all documentation (root + packages)" }
